tests/core_functions/color/hsl/error/one_arg/mod.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/hsl/error/one_arg"
#[allow(unused)]
use super::rsass;
#[allow(unused)]
use rsass::set_precision;

// Ignoring "bracketed", tests with expected error not implemented yet.

// Ignoring "comma_separated", tests with expected error not implemented yet.

// Ignoring "empty", tests with expected error not implemented yet.

// Ignoring "four_elements", tests with expected error not implemented yet.

// Ignoring "hue_type", tests with expected error not implemented yet.

// Ignoring "lightness_type", tests with expected error not implemented yet.

// Ignoring "one_element", tests with expected error not implemented yet.

// Ignoring "quoted_var_slash", tests with expected error not implemented yet.

// Ignoring "saturation_type", tests with expected error not implemented yet.

// Ignoring "two_elements", tests with expected error not implemented yet.
